--- a/meta/main.yml
+++ b/meta/main.yml
@@ -20,6 +20,8 @@
 # [rolehippie.docker](https://github.com/rolehippie/docker)
 # @end
 galaxy_info:
+  role_name: prometheus-vcd-sd
+  namespace: rolehippie
   author: Thomas Boerger
   description: Ansible role to install and configure a Prometheus vCloud service discovery
   license: Apache-2.0
