--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restart prometheus-vcd-sd
-  systemd:
+  ansible.builtin.systemd:
     name: prometheus-vcd-sd
     state: restarted
     daemon_reload: yes
